--- a/OneContact/OneContact/Base.lproj/LaunchScreen.storyboard
+++ b/OneContact/OneContact/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,20 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="ueg-sB-hyD">
+                                <rect key="frame" x="225" y="225" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="Dtr-UY-uKh"/>
+                                    <constraint firstAttribute="height" constant="150" id="SNy-Ag-6KQ"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.20392156859999999" green="0.7843137255" blue="0.44705882349999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="ueg-sB-hyD" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Ofv-U0-oaf"/>
+                            <constraint firstItem="ueg-sB-hyD" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="cZd-e3-YxU"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +37,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Logo" width="300" height="300"/>
+    </resources>
 </document>
