--- a/SearchbarTutorial/SearchbarTutorial/Base.lproj/Main.storyboard
+++ b/SearchbarTutorial/SearchbarTutorial/Base.lproj/Main.storyboard
@@ -39,8 +39,8 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6qE-8B-z43">
-                                <rect key="frame" x="122" y="234" width="130" height="90"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6qE-8B-z43">
+                                <rect key="frame" x="100" y="376" width="130" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="0fj-jK-S0y"/>
                                     <constraint firstAttribute="width" constant="130" id="gIQ-Pz-Sbe"/>
